[package]
name = "esp32-breathe"
version = "0.1.0"
authors = ["Jonathan Rudman <jonathan.rudman@live.co.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
critical-section = {}
